[Qodana] Using StandardCharsets